--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     
     <body>
-        <audio src="/hornsound.mp3" id="audio"></audio>
+        <audio src="./piece-of-cake-611.mp3" id="audio"></audio>
         <video id="video"></video>
         <canvas id="canvas"></canvas>
             <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"> </script>
